fix: markdown content collapsed on mobile devices

--- a/Components/GitHub/markdown.module.scss
+++ b/Components/GitHub/markdown.module.scss
@@ -77,6 +77,11 @@
         flex-direction: column;
     }
 
+    .chapters-wrapper-mobile ~ .markdown-content,
+    .chapters-wrapper-desktop ~ .markdown-content {
+        width: 100%;
+    }
+
     .chapters-wrapper-mobile {
         display: flex;
     }
